--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/regular.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/solid.min.css">
+    <!-- Toastr -->
+    <link rel="stylesheet" href="node_modules/toastr/build/toastr.css">
 </head>
 <body>
     <div class="container">
-        <div class="row mt-3">
+        <div class="row mt-5">
             <div class="col-lg-12 col-md-12 col-12 text-center">
                 <div class="form-group">
                     <label for="key">Your Key</label>
                     <div class="input-group">
                         <input type="text" class="form-control" id="key" autocomplete="off" readonly>
                         <div class="input-group-append">
-                            <button type="button" class="btn btn-success copu" data-clipboard-target="#key">
+                            <button type="button" class="btn btn-success copu" id="btnCop" data-clipboard-target="#key">
                                 <i class="fas fa-copy"></i>
                             </button>
                         </div>
@@ -34,10 +36,18 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-2">
+            <span id="appVersion"></span>
+        </div>
     </div>
+    <!-- Jquery -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Clipboard -->
     <script src="node_modules/clipboard/dist/clipboard.min.js"></script>
+    <!-- Toastr -->
+    <script src="node_modules/toastr/toastr.js"></script>
     <script>
         $(document).ready(function(){
             $('#btnGenerate').click(function(){
@@ -49,6 +59,31 @@
                 var rs = randomString(char);
                 $('#key').val(rs);
             });
+
+            // toastr
+            toastr.options = {
+                "closeButton": false,
+                "debug": false,
+                "newestOnTop": false,
+                "progressBar": true,
+                "positionClass": "toast-top-center",
+                "preventDuplicates": false,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            }
+            $('#btnCop').click(function(){
+                toastr.success('Key Tersalin');
+            });
+            $.getJSON('./package.json',function(data){
+                $('#appVersion').html("Version : "+data.version);
+            })
         })
         
         function randomString(char) {
