--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div class="row mt-5">
             <div class="col-lg-12 col-md-12 col-12 text-center">
                 <div class="form-group">
+                    <input type="radio" name="opcombi" id="alphabet" value="alphabet">Alphabet
+                    <input type="radio" name="opcombi" id="alphanumeric" value="alphanumeric">Alpha-Numeric
+                </div>
+                <div class="form-group">
                     <label for="key">Your Key</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
@@ -82,11 +86,18 @@
     <script>
         $(document).ready(function(){
             $('#btnGenerate').click(function(){
+                var optionalpha = document.getElementById('alphabet').checked;
+                var optionalphanumeric = document.getElementById('alphanumeric').checked;
+                var length = document.getElementById('length').value;
                 var alphas = "abcdefghijklmnopqrstu";
                 var alphab = "ABCDEFGHIJKLMNOPQRSTU";
                 var numeric = "1234567890";
-                var char = alphas+alphab+numeric;
-                var length = document.getElementById('length').value;
+
+                if(optionalpha){
+                    var char = alphas+alphab;
+                }else if(optionalphanumeric){
+                    var char = alphas+alphab+numeric;
+                }
 
                 var rs = randomString(char,length);
                 $('#key').val(rs);
