--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     <div class="modal-body">
                         <p id="author"></p>
                         <p id="appVersion"></p>
+                        <p>Suppot Me</p>
+                        <img src="build/qr-support.png" alt="">
                     </div>
                 </div>
             </div>
