--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-3">
                     <button type="button" class="btn btn-primary" id="btnGenerate">
                         <i class="fas fa-key"></i>
                         <span>Generate</span>
@@ -53,7 +53,7 @@
         </div>
         <div class="row mt-2">
             <div class="col-12 text-center">
-                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#about">
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#about">
                     <i class="fas fa-exclamation"></i>
                     <span>About</span>
                 </button>
@@ -69,8 +69,15 @@
                     <div class="modal-body">
                         <p id="author"></p>
                         <p id="appVersion"></p>
+                        <p id="mail"></p>
                         <p>Suppot Me</p>
                         <img src="build/qr-support.png" alt="">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                            <i class="fas fa-times"></i>
+                            <span>Tutup</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -99,6 +106,8 @@
                     var char = alphas+alphab;
                 }else if(optionalphanumeric){
                     var char = alphas+alphab+numeric;
+                }else if(optionalpha == "" || optionalphanumeric == ""){
+                    return toastr.error('Pilih varian key terlebih dahulu');
                 }
 
                 var rs = randomString(char,length);
@@ -128,7 +137,8 @@
             });
             $.getJSON('./package.json',function(data){
                 $('#appVersion').html("Version : "+data.version);
-                $('#author').html("Author : "+data.author);
+                $('#author').html("Author : "+data.author.name);
+                $('#mail').html("Email : "+data.author.email);
             })
         })
         
